--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur eius tenetur commodi dolorum error vitae ipsum dolore ullam ea! Vero ipsa officia fugit asperiores, sed voluptate quibusdam ratione veritatis. Qui?</p>
+    </div>
 </body>
 </html>
